# data-weave-cli

./: .gitignore  build.gradle  gradle.properties  install-graalvm.sh  settings.gradle
.github/: CODEOWNERS
.github/workflows/: ci.yml  main.yml  release.yml
gradle/wrapper/: gradle-wrapper.properties
native-cli/: build.gradle
native-cli-integration-tests/: build.gradle
native-cli-integration-tests/src/test/scala/org/mule/weave/clinative/: AssertionHelper.scala  NativeCliITTestRunner.scala  NativeCliTest.scala  OSSupport.scala  ResourceResolver.scala  TCKCliTest.scala  TestSuite.scala
native-cli-integration-tests/src/test/scala/org/mule/weave/native/: NativeCliRuntimeIT.scala  NativeCliTest.scala
native-cli/src/main/scala/org/mule/weave/dwnative/: NativeRuntime.scala
native-cli/src/test/scala/org/mule/weave/dwnative/cli/: DataWeaveCLITest.scala
native-lib/: .gitignore  README.md  build.gradle  example_dataweave_module.py  example_streaming.mjs  example_streaming.py
native-lib/node/: .gitignore  binding.gyp  node-api-plan.md  package-lock.json  package.json  tsconfig.json
native-lib/node/src/: addon.c  ffi.ts  index.ts  types.ts  utils.ts
native-lib/node/tests/: dataweave.test.ts
native-lib/python/: setup.cfg  setup.py
native-lib/python/src/dataweave/: __init__.py
native-lib/python/tests/: person.xml  test_dataweave_module.py
native-lib/src/main/java/org/mule/weave/lib/: InputStreamSession.java  NativeCallbacks.java  NativeLib.java  ScriptRuntime.java  StreamSession.java
native-lib/src/test/java/org/mule/weave/lib/: ScriptRuntimeTest.java
