[metadata]
name = dataweave-native
version = 0.0.1
description = Python bindings for the DataWeave native library

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
dataweave =
    native/*
